--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,11 +1,58 @@
-html {
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap");
+
+body {
+  color: #fff;
+  font-family: "Roboto Condensed", sans-serif;
+  background-position: top top;
+  background-size: cover;
+  margin: 0;
+}
+.App {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  background: rgb(98, 98, 119);
+  background: linear-gradient(
+    0deg,
+    rgb(80, 80, 116) 0%,
+    rgb(80, 80, 116) 50%,
+    rgba(81, 81, 126, 0.6) 100%
+  );
+}
+.container {
+  width: 100%;
+  margin: 15% auto;
+}
+.col-4 {
+  width: 25%;
+  float: left;
+}
+
+h1 {
+  font-size: 38px;
+  text-transform: uppercase;
+  line-height: 1;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 1100px;
+  }
+  h1 {
+    font-size: 58px;
+  }
+}
+/* html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   font: 112.5%/1.45em georgia, serif, sans-serif;
   box-sizing: border-box;
   overflow-y: scroll;
-}
-body {
+} */
+/* body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -18,7 +65,7 @@ body {
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
-}
+} */
 article,
 aside,
 details,
@@ -110,7 +157,7 @@ sup {
 }
 img {
   border-style: none;
-  max-width: 100%;
+  max-width: 10%;
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
